--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <form id="form">
           <input type="text" id="name" placeholder="Ingredient" />
           <input type="number" id="number" placeholder="How many?" />
-          <button id="form-save">Add</button>
+          <button id="form-save" type="submit">Add</button>
         </form>
       </div>
 
