Add modification logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <form id="form">
           <input type="text" id="name" placeholder="Ingredient" />
           <input type="number" id="number" placeholder="How many?" />
+          <input type="hidden" id="hidden-index" />
           <button id="form-save" type="submit">Add</button>
         </form>
       </div>
